package com.aluguelcarro.model;

public interface Imprimivel {
    void gerarRelatorio();
}